<?xml version="1.0" encoding="utf-8"?>

<!--
  prefs.xml

  Copyright (C) 2011 Eric Butler

  Authors:
  Eric Butler <eric@codebutler.com>

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/accessibility">
        <CheckBoxPreference
            android:title="@string/speak_balance"
            android:summary="@string/speak_balance_summary"
            android:key="pref_key_speak_balance" />
    </PreferenceCategory>
</PreferenceScreen>